--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1347,7 +1347,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="editor_help_header_text">अपनी समस्या हमें मेल करें</string>
   <string name="get_help_bottom_text">हमारी सपोर्ट टीम आपकी सहायता करेगी।</string>
   <string name="detail_take_survey">Take survey</string>
-  <string name="all_follow">Follow</string>
+  <string name="all_follow">फोलो</string>
+  <string name="all_following">फॉलोविंग</string>
   <string name="invite_friends_follow_you">दोस्तों को आपको फॉलो करने के लिए आमंत्रित करें</string>
   <string name="invite_friends_facebook">फेसबुक दोस्त</string>
   <string name="invite_friends_link">आमंत्रण लिंक शेयर करें</string>
@@ -1355,9 +1356,10 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_thankyou_msg">धन्यवाद! वीडियो अपलोड होने के बाद हम आपको सूचित करेंगे।</string>
   <string name="video_upload_success">आपका वीडियो सफलता पूर्वक अपलोड हो गया है।</string>
   <string name="all_open">खोलें</string>
-  <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
-  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers to see the best videos on Momspresso! </string>
-  <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
+  <string name="watch_other_videos_text_in_mom_vlog_following_feed">जब तक हम आपकी व्यक्तिगत फीड  बना रहे हैं तब तक आप अन्य  बेहतरीन वीडियोज देखें</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">आप किसी को फोलो नहीं कर रहे हैं। मॉम्सप्रेस्सो पर सबसे अच्छे वीडियो देखने के लिए हमारे टॉप वी-लॉगर्स को फोलो करें।</string>
+  <string name="follow_the_best_vloggers_on_momspresso">बेस्ट वी-लॉगर्स को फोलो करें</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
+  <string name="add_vlogs_detail_select_tag">टैग चुनें</string>
 </resources>
