--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1331,7 +1331,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="editor_help_header_text">সাহায্যের প্রয়োজন?</string>
   <string name="get_help_bottom_text">কোনো সমস্যা হলে অনুগ্রহ করে মেইল করুন যাতে আমরা সহায়তা করে পারি </string>
   <string name="detail_take_survey">Take survey</string>
-  <string name="all_follow">Follow</string>
+  <string name="all_follow">ফলো করুন</string>
+  <string name="all_following">ফলো করছেন</string>
   <string name="invite_friends_follow_you">আপনাকে অনুসরণ করার জন্য বন্ধুদের আমন্ত্রণ জানান</string>
   <string name="invite_friends_facebook">ফেসবুকের বন্ধুরা</string>
   <string name="invite_friends_link">আমন্ত্রণের লিঙ্ক শেয়ার করুন</string>
@@ -1339,9 +1340,10 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_thankyou_msg">ধন্যবাদ! আপনার ভিডিওটি আপলোড হলেই আমরা আপনাকে নোটিফিকেশন পাঠাবো|</string>
   <string name="video_upload_success">ভিডিওটি সফলভাবে আপলোড হয়েছে</string>
   <string name="all_open">দেখুন</string>
-  <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
-  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers to see the best videos on Momspresso! </string>
-  <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
+  <string name="watch_other_videos_text_in_mom_vlog_following_feed">যতক্ষণ পর্যন্ত আমরা আপনার ব্যক্তিগত ফিড তৈরী করছি, ততক্ষণ পর্যন্ত আপনি অন্যান্য সুন্দর ভিডিওগুলি দেখুন</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">আপনি কি এখনো কাউকে ফলো করছেন না? তাহলে সবথেকে ভালো ভিডিওগুলি দেখতে আমাদের টপ ভিলগারদের ফলো করুন|</string>
+  <string name="follow_the_best_vloggers_on_momspresso">সবথেকে ভালো ভিলগারদের ফলো করুন</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
+  <string name="add_vlogs_detail_select_tag">একটি ট্যাগ বেছে নিন</string>
 </resources>
