--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1499,6 +1499,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="get_help_bottom_text">Please mail us your issue so we can help you out.</string>
   <string name="detail_take_survey">Take survey</string>
   <string name="all_follow">Follow</string>
+  <string name="all_following">Following</string>
   <string name="invite_friends_follow_you">Invite Friends to Follow you</string>
   <string name="invite_friends_facebook">Facebook Friends</string>
   <string name="invite_friends_link">Share Invite Link</string>
@@ -1511,5 +1512,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
+  <string name="add_vlogs_detail_select_tag">SELECT A TAG</string>
 </resources>
 
