--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1392,4 +1392,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="label_survey_reject">Unfortunately, you did not qualify to complete the survey.</string>
   <string name="detail_bottom_survey_rejected">Survey rejected</string>
   <string name="follow_invite">Your friend has been invited to follow you!</string>
+  <string name="participate">Participate</string>
+  <string name="choose_video_from_gallery">Choose video from gallery</string>
 </resources>
