adding click event on challenge card vlog

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1346,4 +1346,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="follow_invite">Your friend has been invited to follow you!</string>
   <string name="participate">Participate</string>
   <string name="choose_video_from_gallery">Choose video from gallery</string>
+  <string name="see_more_challenge">SEE MORE CHALLENGES</string>
 </resources>
