vlog tutorial + collection vlog playlist + invite friends post creation + challenge card in vlog detail fixes

--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1463,4 +1463,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="participate">Participate</string>
   <string name="choose_video_from_gallery">Choose video from gallery</string>
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
+  <string name="vlog_tutorial">Vlog Tutorial</string>
 </resources>
