textual changes in proof upload

--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1466,4 +1466,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
   <string name="spread_the_word">Spread the word</string>
   <string name="choose_proof">Choose Proof</string>
+  <string name="invite_friends_whatsapp">Invite via whatsapp</string>
 </resources>
