--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1464,7 +1464,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
-  <string name="spread_the_word">Spread the word</string>
+  <string name="share_app">સહારે અપ્પ</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="share_app_msg">કેમ છો! આજે જ ચકાસો મોમ્સ્પ્રેસો એપ જ્યાં હું મારી જાત ને વાર્તાઓ અને વિડીયો થકી વ્યક્ત કરવા સક્ષમ છું. મોમ્સ્પ્રેસો એપ અત્યારે જ ડાઉનલોડ કરો. %1s</string>
+  <string name="invite_phone_contact">Invite contacts to follow you</string>
 </resources>
