--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1396,7 +1396,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
-  <string name="spread_the_word">Spread the word</string>
+  <string name="share_app">ഷെയർ ആപ്പ്</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="share_app_msg">നമസ്കാരം ! മോംസ്പ്രെസ്സോ ആപ്പിലൂടെ എന്റെ കഥകളും വീഡിയോകളും കണ്ടു നോക്കൂ. ഇപ്പോൾ തന്നെ ഡൗൺലോഡ്  ചെയ്യുക. %1s</string>
+  <string name="invite_phone_contact">Invite contacts to follow you</string>
 </resources>
