--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1350,7 +1350,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
-  <string name="spread_the_word">Spread the word</string>
+  <string name="share_app">शेयर एप्प</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="share_app_msg">"नमस्कार, माझे पोस्ट आणि व्हिडीओ पाहण्यासाठी आजच मॉम्सप्रेसो अ‍ॅप डाउनलोड करा .%1s</string>
+  <string name="invite_phone_contact">Invite contacts to follow you</string>
 </resources>
