--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1348,7 +1348,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
-  <string name="spread_the_word">Spread the word</string>
+  <string name="share_app">ஷேர் ஆப்</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="share_app_msg">ஹாய், நான் கதைகளையும், காணொளிகளையும் வெளியிட்டு வரும் மாம்ஸ்ப்ரெஸ்ஸோ செயலியை பாருங்கள், இப்போதே தரவிறக்கம் செய்யுங்கள். %1s</string>
+  <string name="invite_phone_contact">Invite contacts to follow you</string>
 </resources>
