--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1523,9 +1523,11 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="choose_video_from_gallery">Choose video from gallery</string>
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
-  <string name="spread_the_word">Spread the word</string>
+  <string name="share_app">Share App</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="share_app_msg">Hi! Check out the Momspresso app, where I express myself through Stories and Videos. Download now %1s</string>
+  <string name="invite_phone_contact">Invite contacts to follow you</string>
 </resources>
 
