--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1450,7 +1450,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_open">વિડીયો જુઓ</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">જ્યાર સુધી અમે તમારી વ્યક્તિગત ફિડ બનાવીએ, ત્યાર સુધી અમારા જોરદાર વિડીયો માણો</string>
   <string name="follow_creators_feed_header_text_in_mom_vlog_feed">તમે કોઈને અનુસર્યા નથી. અમારા શ્રેષ્ઠ વી લોગર ને અનુસરો અને સર્વશ્રેષ્ઠ વિડીયો જુઓ!</string>
-  <string name="follow_the_best_vloggers_on_momspresso">શ્રેષ્ઠ વી લોગરો ને અનુસરો</string>
+  <string name="follow_the_best_vloggers_on_momspresso">તમારા ચહેતા વી લોગરો ને અનુસરો </string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
   <string name="add_vlogs_detail_select_tag">ટેગ પસંદ કરો</string>
