--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1378,7 +1378,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_open">ತೆರೆಯಿರಿ</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">ನಿಮಗೆ ಇಷ್ಟವಾಗುವ ವಿಡಿಯೋಗಳ ಪಟ್ಟಿಯನ್ನು ನಾವು ಸಿದ್ಧಪಡಿಸುತ್ತಿದ್ದೇವೆ. ಈ ಸಮಯದಲ್ಲಿ ನಮ್ಮ ಬೆಸ್ಟ್ ವಿಡಿಯೋಗಳನ್ನು ನೋಡಿ</string>
   <string name="follow_creators_feed_header_text_in_mom_vlog_feed">ನೀವು ಯಾರನ್ನೂ ಫಾಲೋ ಮಾಡುತ್ತಿಲ್ಲ ಅತ್ಯುತ್ತಮ ವಿಡಿಯೋಗಳನ್ನು ನೋಡಲು ನಮ್ಮ ಟಾಪ್‌ ವಿಡಿಯೋ ಬ್ಲಾಗರ್‌ ಗಳನ್ನು ಫಾಲೋ ಮಾಡಿ</string>
-  <string name="follow_the_best_vloggers_on_momspresso">ಮಾಮ್ಸ್ಪ್ರೆಸೋದ ಬೆಸ್ಟ್ ವಿಡಿಯೋ ಬ್ಲಾಗರ್‌ ಗಳನ್ನು ಫಾಲೋ ಮಾಡಿ</string>
+  <string name="follow_the_best_vloggers_on_momspresso">ಮಾಮ್ಸ್ಪ್ರೆಸೋದ ಟಾಪ್‌ ವಿಡಿಯೋ ಬ್ಲಾಗರ್‌ ಗಳನ್ನು ಫಾಲೋ ಮಾಡೊ</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
   <string name="add_vlogs_detail_select_tag">ಟ್ಯಾಗ್‌ ಆಯ್ದುಕೊಳ್ಳಿ</string>
