--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1398,8 +1398,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_success">ਤੁਹਾਡਾ ਵੀਡੀਓ ਸਫਲਤਾਪੂਰਵਕ ਅਪਲੋਡ ਹੋ ਗਿਆ ਹੈ।</string>
   <string name="all_open">ਵੀਡੀਓ ਦੇਖੋ</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">ਜਦੋਂ ਤੱਕ ਅਸੀਂ ਤੁਹਾਡੀ ਨਿੱਜੀ ਫੀਡ ਤਿਆਰ ਕਰ ਰਹੇ ਹਾਂ, ਉਦੋਂ ਤੱਕ ਤੁਸੀਂ ਹੋਰ ਵਧੀਆ ਵੀਡੀਓ ਵੇਖੋ</string>
-  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">ਤੁਸੀਂ ਕਿਸੇ ਨੂੰ ਫੋਲੋ ਨਹੀਂ ਕਰ ਰਹੇ ਹੋ। ਮੌਮਸਪ੍ਰੈਸੋ \'ਤੇ ਸਭ ਤੋਂ ਵਧੀਆ ਵੀਡੀਓ ਦੇਖਣ ਲਈ ਸਾਡੇ ਟਾਪ ਵੀ-ਲੌਗਰਸ ਨੂੰ ਫੋਲੋ ਕਰੋ</string>
-  <string name="follow_the_best_vloggers_on_momspresso">ਬੈਸਟ ਵੀ-ਲੌਗਰਸ ਨੂੰ ਫੋਲੋ ਕਰੋ</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">ਤੁਸੀਂ ਕਿਸੇ ਨੂੰ ਫੋਲੋ ਨਹੀਂ ਕਰ ਰਹੇ ਹੋ। ਸਾਡੇ ਟਾਪ ਵੀ-ਲੌਗਰਸ ਨੂੰ ਫੋਲੋ ਕਰੋ ਅਤੇ ਆਪਣੀ ਫੀਡ ਬਣਾਓ।</string>
+  <string name="follow_the_best_vloggers_on_momspresso">ਬਆਪਣੇ ਮਨਪਸੰਦ ਵੀ-ਲੌਗਰਸ ਨੂੰ ਫੋਲੋ ਕਰੋ</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
   <string name="add_vlogs_detail_select_tag">ਟੈਗ ਚੁਣੋ</string>
