--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1334,7 +1334,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_open">திற</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">உங்களுக்கான பக்கத்தை நாங்கள் உருவாக்கும் வரை, வேறு சிறந்த வீடியோக்களைப் பாருங்கள்</string>
   <string name="follow_creators_feed_header_text_in_mom_vlog_feed">நீங்கள் யாரையும் பின்பற்றவில்லை.   சிறந்த வீடியோக்களைக் காண எங்களின் சிறந்த விலாகர்களை பின்தொடருங்கள்!</string>
-  <string name="follow_the_best_vloggers_on_momspresso">சிறந்த விலாகர்களை பின்தொடருங்கள்</string>
+  <string name="follow_the_best_vloggers_on_momspresso">உங்களுக்கு பிடித்த விலாகர்களை பின்தொடருங்கள்</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
   <string name="add_vlogs_detail_select_tag">வகையைக் தேர்ந்தெடுங்கள்</string>
