--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1509,8 +1509,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="video_upload_success">Successfully Uploaded</string>
   <string name="all_open">Open</string>
   <string name="watch_other_videos_text_in_mom_vlog_following_feed">Watch other awesome videos while we create your personalized feed</string>
-  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers to see the best videos on Momspresso! </string>
-  <string name="follow_the_best_vloggers_on_momspresso">Follow the best vloggers on Momspresso</string>
+  <string name="follow_creators_feed_header_text_in_mom_vlog_feed">You aren\'t following anyone. Follow our top vloggers and curate your own feed!</string>
+  <string name="follow_the_best_vloggers_on_momspresso">Follow vloggers that you love</string>
   <string name="all_live_challenges">Live Challenges</string>
   <string name="view_comments">View Comments</string>
   <string name="add_vlogs_detail_select_tag">SELECT A TAG</string>
