--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -963,9 +963,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="drawer_referra_mymoney">Refer MyMoney</string>
   <string name="referral_screen_text">ನಿಮ್ಮ ರೆಫರಲ್ ಕೋಡ್ ನಿಮ್ಮ ಸ್ನೇಹಿತೆಯರ ಜೊತೆ ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ಮಾಯ್ ಮನಿ ಸೇರಲು ಆಮಂತ್ರಿಸಿ. ಅವರು ಕ್ಯಾಂಪೆನ್ ಪೂರ್ಣಗೊಳಿಸದ ನಂತರ ನಿಮ್ಮಿಬ್ಬರಿಗೂ 25ರೂ. ದೊರೆಯುತ್ತದೆ.</string>
   <string name="share_referral_screen">ನಿಮ್ಮ ರೆಫರಲ್ ಕೋಡ್ ಅನ್ನು ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ಹಣ ಗಳಿಸಿ</string>
-  <string name="referral_screen_whatsapp">WhatsApp</string>
+  <string name="all_whatsapp">WhatsApp</string>
 
-  <string name="referral_screen_facebook">Facebook</string>
+  <string name="all_facebook">Facebook</string>
 
   <string name="rewards_tab_fragment_personalInfo_text">PERSONAL INFO</string>
   <string name="rewards_tab_fragment_socialLink_text">SOCIAL LINKS</string>
@@ -1392,9 +1392,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="see_more_challenge">SEE MORE CHALLENGES</string>
   <string name="vlog_tutorial">Vlog Tutorial</string>
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
-  <string name="share_app">ಶೇರ್ ಅಪ್ಪ</string>
+  <string name="share_app">ಶೇರ್ ಆಪ್</string>
   <string name="choose_proof">Choose Proof</string>
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
   <string name="share_app_msg">ಹಾಯ್! ಮಾಮ್ಸ್ಪ್ರೆಸ್ಸೋ ಆಪ್ ನೀವು ಬಳಸಿ! ಇಲ್ಲಿ ನಾನೂ ಕಥೆ, ಲೇಖನ,  ವಿಡಿಯೋಗಳ ಮೂಲಕ ನನ್ನ ಭಾವನೆಗಳನ್ನು,  ಪ್ರತಿಭೆಯನ್ನು ಅನಾವರಣಗೊಳಿಸುತ್ತೇನೆ. ಆಪ್  ಡೌನ್ಲೋಡ್ ಮಾಡಿ. %1s</string>
   <string name="invite_phone_contact">Invite contacts to follow you</string>
+  <string name="share_the_app_via">Share the App via</string>
+  <string name="all_phonebook">Phonebook</string>
+  <string name="all_fb_msngr">Facebook Messenger</string>
 </resources>
