--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,7 +168,7 @@
   <string name="ad.bottom_bar.facebook">FACEBOOK</string>
   <string name="ad.bottom_bar.whatsapp">WHATSAPP</string>
   <string name="ad.bottom_bar.email">EMAIL</string>
-  <string name="ad.bottom_bar.generic_share">SHARE</string>
+  <string name="ad.bottom_bar.generic_share">Share</string>
   <string name="ad.bottom_bar.bookmark">BOOKMARK</string>
   <string name="ad.bottom_bar.like">LIKE</string>
   <string name="ad.recent_logs_from.title">MORE FROM AUTHOR</string>
@@ -181,18 +181,6 @@
   <string name="vd.trending.title">TRENDING VIDEOS</string>
 
   <string name="confirmation_dialog.delete_draft.message">Are you sure you want to delete your draft?</string>
-
-  public static final String LOCALE_ENGLISH = "en";
-  public static final String LOCALE_HINDI = "hi";
-  public static final String LOCALE_MARATHI = "mr";
-  public static final String LOCALE_BENGALI = "bn";
-  public static final String LOCALE_TAMIL = "ta";
-  public static final String LOCALE_TELUGU = "te";
-  public static final String LOCALE_KANNADA = "kn";
-  public static final String LOCALE_MALAYALAM = "ml";
-  public static final String LOCALE_GUJARATI = "gu";
-  public static final String LOCALE_PUNJABI= "pa";
-
 
   <string name="confirmation_dialog.no">NO</string>
 
@@ -1134,8 +1122,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="drawer_referra_mymoney">Refer MyMoney</string>
   <string name="referral_screen_text">Invite a friend to join MyMoney by sharing your referral code. Both of you will earn Rs. 25 once she has successfully completed a MyMoney campaign.</string>
   <string name="share_referral_screen">Share your referral code and start earning</string>
-  <string name="referral_screen_whatsapp">WhatsApp</string>
-  <string name="referral_screen_facebook">Facebook</string>
+  <string name="all_whatsapp">Whatsapp</string>
+  <string name="all_facebook">Facebook</string>
   <string name="rewards_tab_fragment_personalInfo_text">PERSONAL INFO</string>
   <string name="rewards_tab_fragment_socialLink_text">SOCIAL LINKS</string>
   <string name="rewards_tab_fragment_paymentMode">PAYMENT MODE</string>
@@ -1529,5 +1517,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
   <string name="share_app_msg">Hi! Check out the Momspresso app, where I express myself through Stories and Videos. Download now %1s</string>
   <string name="invite_phone_contact">Invite contacts to follow you</string>
+  <string name="share_the_app_via">Share the App via</string>
+  <string name="all_phonebook">Phonebook</string>
+  <string name="all_fb_msngr">Facebook Messenger</string>
 </resources>
 
